shuffler context + redis + docker-compose